--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
+    "prettier": "2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^4.2.9",
     "vite": "^5.0.3"
   },
