--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "cookie": "^0.4.1",
+    "svelte-fa": "^4.0.3",
     "svelte-hamburgers": "^4.0.1",
     "svelte-kit": "^1.2.0",
     "svelte-multiselect": "^10.2.0",
